refactor: code clean-up